diesel_compile_tests/tests/fail/derive_deprecated/deprecated_table_name.stderr
warning: #[table_name] attribute form is deprecated
  = help: use `#[diesel(table_name = users)]` instead

error: unexpected end of input, expected `=`
       help: the correct format looks like `#[diesel(table_name = foo)]`
  --> tests/fail/derive_deprecated/deprecated_table_name.rs:12:3
   |
LL | #[table_name]
   |   ^^^^^^^^^^

error: expected `=`
  --> tests/fail/derive_deprecated/deprecated_table_name.rs:20:13
   |
LL | #[table_name()]
   |             ^^

error: expected string literal
  --> tests/fail/derive_deprecated/deprecated_table_name.rs:27:16
   |
LL | #[table_name = 1]
   |                ^

warning: #[table_name] attribute form is deprecated
  = help: use `#[diesel(table_name = 1)]` instead

error: expected identifier
  --> tests/fail/derive_deprecated/deprecated_table_name.rs:35:16
   |
LL | #[table_name = "1"]
   |                ^^^
